# aiotaipit

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
aiotaipit/: __init__.py  __main__.py  api.py  auth.py  cli.py  const.py  exceptions.py  helpers.py
tests/: common.py  conftest.py  test_api.py  test_api_mock.py  test_auth.py  test_auth_mock.py  test_helpers.py
tests/fixtures/: current_user_response.json  meter_info_response.json  meter_readings_response.json  meters_response.json  own_meters_response.json  settings_response.json  tariff_response.json  token_invalid_client.json  token_response.json  user_info_response.json
