[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "aiotaipit"
version = "3.0.0"
dependencies = [
    "aiohttp>=3"
]
description = "Asynchronous Python API For Taipit Cloud Meters"
readme = "README.md"
requires-python = ">=3.13"
keywords = [
    "taipit",
    "neva",
    "wi-fi",
    "electricity meter"
]
license = { text = "MIT License" }
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: 3 :: Only",
    "Typing :: Typed",
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-asyncio",
    "aioresponses",
]

[project.urls]
Home = "https://github.com/lizardsystems/aiotaipit"
Repository = "https://github.com/lizardsystems/aiotaipit"
Documentation = "https://github.com/lizardsystems/aiotaipit"
"Bug Tracker" = "https://github.com/lizardsystems/aiotaipit/issues"
Changelog = "https://github.com/lizardsystems/aiotaipit/blob/main/CHANGELOG.md"

[[project.authors]]
name = "LizardSystems"

[tool.setuptools]
platforms = ["any"]
include-package-data = true
package-data = {"aiotaipit" = ["py.typed"]}

[project.scripts]
aiotaipit = "aiotaipit.__main__:main"

[tool.setuptools.packages.find]
include = ["aiotaipit*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_test_loop_scope = "class"
asyncio_default_fixture_loop_scope = "class"
markers = [
    "integration: tests that require real API access (deselected by default in CI)",
]
